--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<div class="header-top">
 			<div class="header-top-lang">
 				<p id="en" class="header-top-lang__item activ">EN</a>
-				<p id="ru" class="header-top-lang__item">RU</a>
+				<p id="uk" class="header-top-lang__item">UK</a>
 			</div>
 			<a href="" class="header-top__link en">Online ordering</a>
-			<a href="" class="header-top__link ru delete">Заказать онлайн</a>
+			<a href="" class="header-top__link uk delete">Онлайн замовлення</a>
 		</div>
 		<div class="header-bottom">
 			<div class="header-bottom__column">
@@ -24,15 +24,15 @@
 					<ul class="header-bottom-menu-list">
 						<li>
 							<a href="" class="header-bottom-menu__link en">About</a>
-							<a href="" class="header-bottom-menu__link ru delete">Про нас</a>
+							<a href="" class="header-bottom-menu__link uk delete">Про нас</a>
 						</li>
 						<li>
 							<a href="" class="header-bottom-menu__link en">Menus</a>
-							<a href="" class="header-bottom-menu__link ru delete">Меню</a>
+							<a href="" class="header-bottom-menu__link uk delete">Меню</a>
 						</li>
 						<li>
 							<a href="" class="header-bottom-menu__link en">Servis Info</a>
-							<a href="" class="header-bottom-menu__link ru delete">Сервис</a>
+							<a href="" class="header-bottom-menu__link uk delete">Сервис інфо</a>
 						</li>
 					</ul>
 				</nav>
@@ -40,10 +40,10 @@
 			<div class="header-bottom__column">
 				<a href="" class="header-logo">
 					<span class="header-logo__text en">NYC'S</span>
-					<span class="header-logo__text ru delete">Нью-Йорк</span>
+					<span class="header-logo__text uk delete">Нью-Йорк</span>
 					<span class="header-logo__image"><img src="img/logo.png" alt=""></span>
 					<span class="header-logo__text en">Catering</span>
-					<span class="header-logo__text ru delete">Очень вкусно</span>
+					<span class="header-logo__text uk delete">Дуже смачно</span>
 				</a>
 			</div>
 			<div class="header-bottom__column">
@@ -51,15 +51,15 @@
 					<ul class="header-bottom-menu-list">
 						<li>
 							<a href="" class="header-bottom-menu__link en">Gallery</a>
-							<a href="" class="header-bottom-menu__link ru delete">Галлерея</a>
+							<a href="" class="header-bottom-menu__link uk delete">Галерея</a>
 						</li>
 						<li>
 							<a href="" class="header-bottom-menu__link en">Friends</a>
-							<a href="" class="header-bottom-menu__link ru delete">Друзья</a>
+							<a href="" class="header-bottom-menu__link uk delete">Друзі</a>
 						</li>
 						<li>
 							<a href="" class="header-bottom-menu__link en">Contact</a>
-							<a href="" class="header-bottom-menu__link ru delete">Контакты</a>
+							<a href="" class="header-bottom-menu__link uk delete">Контакти</a>
 						</li>
 					</ul>
 				</nav>
@@ -76,14 +76,14 @@
 					<div class="private-body">
 						<div class="private-body-content">
 							<div class="private-body__title en">Private catering</div>
-							<div class="private-body__title ru delete">Часный ресторан</div>
+							<div class="private-body__title uk delete">Приватне харчування</div>
 							<div class="private-body__text en">Treat your guests to a beautifully plated dinner, hand-crafted canapes or a casual BBQ.</div>
-							<div class="private-body__text ru delete">Побалуйте своих гостей красиво сервированным ужином, канапе ручной работы или приготовлением барбекю в непринужденной обстановке.</div>
+							<div class="private-body__text uk delete">Побалуйте своїх гостей красиво накритою вечерею, виготовленими вручну канапе або простим барбекю.</div>
 							<div class="private-body-buttons">
 								<a href="" class="private-body-buttons__item btn btn--w en">Get a quote</a>
-								<a href="" class="private-body-buttons__item btn btn--w ru delete">Скидка</a>
+								<a href="" class="private-body-buttons__item btn btn--w uk delete">Скидка</a>
 								<a href="" class="private-body-buttons__link en">View menus</a>
-								<a href="" class="private-body-buttons__link ru delete">Наше Меню</a>
+								<a href="" class="private-body-buttons__link uk delete">Наше Меню</a>
 
 							</div>
 						</div>
@@ -97,44 +97,44 @@
 							<div class="products-item">
 								<a href="" class="products-item__image ibg"><img src="img/products/01.jpg" alt=""></a>
 								<a href="" class="products-item__title en">Corporate catering</a>
-								<a href="" class="products-item__title ru delete">Заказы оптом</a>
+								<a href="" class="products-item__title uk delete">Корпоративне харчування</a>
 								<div class="products-item__text en">We are able to serve events from 2 to 2000 guests and always reasonable prices.</div>
-								<div class="products-item__text ru delete">Мы можем обслуживать мероприятия от 2 до 2000 гостей и всегда по разумным ценам.</div>
-								<p><a href="" class="products-item__btn btn en">Get a quote</a><a href="" class="products-item__btn btn ru delete">Скидка</a></p>
-								<p><a href="" class="products-item__link en">View menus</a><a href="" class="products-item__link ru delete">Наше меню</a></p>
+								<div class="products-item__text uk delete">Ми можемо обслуговувати заходи від 2 до 2000 гостей і завжди за доступними цінами.</div>
+								<p><a href="" class="products-item__btn btn en">Get a quote</a><a href="" class="products-item__btn btn uk delete">Скидка</a></p>
+								<p><a href="" class="products-item__link en">View menus</a><a href="" class="products-item__link uk delete">Наше меню</a></p>
 							</div>
 						</div>
 						<div class="products__column">
 							<div class="products-item">
 								<a href="" class="products-item__image ibg"><img src="img/products/02.jpg" alt=""></a>
 								<a href="" class="products-item__title en">Private catering</a>
-								<a href="" class="products-item__title ru delete">Семейные заказы</a>
+								<a href="" class="products-item__title uk delete">Сімейні замовлення</a>
 								<div class="products-item__text en">Fresh seasonal and simple cuisine. Food is our business and our passion.</div>
-								<div class="products-item__text ru delete">Свежая сезонная и простая кухня. Еда - это наш бизнес и наша страсть.</div>
-								<p><a href="" class="products-item__btn btn en">Get a quote</a><a href="" class="products-item__btn btn ru delete">Скидка</a></p>
-								<p><a href="" class="products-item__link en">View menus</a><a href="" class="products-item__link ru delete">Наше меню</a></p>
+								<div class="products-item__text uk delete">Свіжа сезонна та проста кухня. Їжа - це наш бізнес і наша пристрасть.</div>
+								<p><a href="" class="products-item__btn btn en">Get a quote</a><a href="" class="products-item__btn btn uk delete">Скидка</a></p>
+								<p><a href="" class="products-item__link en">View menus</a><a href="" class="products-item__link uk delete">Наше меню</a></p>
 							</div>
 						</div>
 						<div class="products__column">
 							<div class="products-item">
 								<a href="" class="products-item__image ibg"><img src="img/products/03.jpg" alt=""></a>
 								<a href="" class="products-item__title en">Wedding catering</a>
-								<a href="" class="products-item__title ru delete">Свадебный банкет</a>
+								<a href="" class="products-item__title uk delete">Весільний банкет</a>
 								<div class="products-item__text en">We use only the best organic ingredients and gluten and dairy free cooking.</div>
-								<div class="products-item__text ru delete">Мы используем только лучшие органические ингредиенты, а также готовим без глютена и молочных продуктов.</div>
-								<p><a href="" class="products-item__btn btn en">Get a quote</a><a href="" class="products-item__btn btn ru delete">Скидка</a></p>
-								<p><a href="" class="products-item__link en">View menus</a><a href="" class="products-item__link ru delete">Наше меню</a></p>
+								<div class="products-item__text uk delete">Ми використовуємо лише найкращі органічні інгредієнти та готуємо страви без глютену та молочних продуктів.</div>
+								<p><a href="" class="products-item__btn btn en">Get a quote</a><a href="" class="products-item__btn btn uk delete">Скидка</a></p>
+								<p><a href="" class="products-item__link en">View menus</a><a href="" class="products-item__link uk delete">Наше меню</a></p>
 							</div>
 						</div>
 						<div class="products__column">
 							<div class="products-item">
 								<a href="" class="products-item__image ibg"><img src="img/products/04.jpg" alt=""></a>
 								<a href="" class="products-item__title en">Online Ordering</a>
-								<a href="" class="products-item__title ru delete">Заказать онлайн</a>
+								<a href="" class="products-item__title uk delete">Онлайн замовдення</a>
 								<div class="products-item__text en">Successful catering is about organisation, high quality service, and great food.</div>
-								<div class="products-item__text ru delete">Успешный ресторан - это организация, высокое качество обслуживания и отличная еда.</div>
-								<p><a href="" class="products-item__btn btn en">Get a quote</a><a href="" class="products-item__btn btn ru delete">Скидка</a></p>
-								<p><a href="" class="products-item__link en">View menus</a><a href="" class="products-item__link ru delete">Наше меню</a></p>
+								<div class="products-item__text uk delete">Успішний ресторан — це організація, високоякісне обслуговування та смачна їжа.</div>
+								<p><a href="" class="products-item__btn btn en">Get a quote</a><a href="" class="products-item__btn btn uk delete">Скидка</a></p>
+								<p><a href="" class="products-item__link en">View menus</a><a href="" class="products-item__link uk delete">Наше меню</a></p>
 							</div>
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 				<div class="why-top">
 					<div class="why-top__column">
 						<div class="why-top__text en">Why CHOOSE us?</div>
-						<div class="why-top__text ru delete">Почему выбрали нас?</div>
+						<div class="why-top__text uk delete">Чому обирають нас?</div>
 					</div>
 					<div class="why-top__column">
 						<div class="why-top__image ibg"><img src="img/why/01_1.jpg" alt=""></div>
@@ -158,9 +158,9 @@
 									<div class="why-body-item__icon"><img src="img/why/icons/01.jpg" alt=""></div>
 									<div class="why-body-item-body">
 										<div class="why-body-item-body__title en">Always fresh</div>
-										<div class="why-body-item-body__title ru delete">Свежесть всегда</div>
+										<div class="why-body-item-body__title uk delete">Свіжість завжди</div>
 										<div class="why-body-item-body__text en">Fresh, seasonal and simple cuisine. Food is our business and our passion.</div>
-										<div class="why-body-item-body__text ru delete">Свежая, сезонная и простая кухня. Еда - это наш бизнес и наша страсть.</div>
+										<div class="why-body-item-body__text uk delete">Свіжа, сезонна та проста кухня. Їжа - це наш бізнес і наша пристрасть.</div>
 									</div>
 								</div>
 							</div>
@@ -169,9 +169,9 @@
 									<div class="why-body-item__icon"><img src="img/why/icons/02.jpg" alt=""></div>
 									<div class="why-body-item-body">
 										<div class="why-body-item-body__title en">Always fresh</div>
-										<div class="why-body-item-body__title ru delete">Свежесть всегда</div>
+										<div class="why-body-item-body__title uk delete">Свіжість завжди</div>
 										<div class="why-body-item-body__text en">Fresh, seasonal and simple cuisine. Food is our business and our passion.</div>
-										<div class="why-body-item-body__text ru delete">Свежая, сезонная и простая кухня. Еда - это наш бизнес и наша страсть.</div>
+										<div class="why-body-item-body__text uk delete">Свіжа, сезонна та проста кухня. Їжа - це наш бізнес і наша пристрасть.</div>
 									</div>
 								</div>
 							</div>
@@ -180,9 +180,9 @@
 									<div class="why-body-item__icon"><img src="img/why/icons/03.jpg" alt=""></div>
 									<div class="why-body-item-body">
 										<div class="why-body-item-body__title en">Always fresh</div>
-										<div class="why-body-item-body__title ru delete">Свежесть всегда</div>
+										<div class="why-body-item-body__title uk delete">Свіжість завжди</div>
 										<div class="why-body-item-body__text en">Fresh, seasonal and simple cuisine. Food is our business and our passion.</div>
-										<div class="why-body-item-body__text ru delete">Свежая, сезонная и простая кухня. Еда - это наш бизнес и наша страсть.</div>
+										<div class="why-body-item-body__text uk delete">Свіжа, сезонна та проста кухня. Їжа - це наш бізнес і наша пристрасть.</div>
 									</div>
 								</div>
 							</div>
@@ -191,9 +191,9 @@
 									<div class="why-body-item__icon"><img src="img/why/icons/04.jpg" alt=""></div>
 									<div class="why-body-item-body">
 										<div class="why-body-item-body__title en">Always fresh</div>
-										<div class="why-body-item-body__title ru delete">Свежесть всегда</div>
+										<div class="why-body-item-body__title uk delete">Свіжість завжди</div>
 										<div class="why-body-item-body__text en">Fresh, seasonal and simple cuisine. Food is our business and our passion.</div>
-										<div class="why-body-item-body__text ru delete">Свежая, сезонная и простая кухня. Еда - это наш бизнес и наша страсть.</div>
+										<div class="why-body-item-body__text uk delete">Свіжа, сезонна та проста кухня. Їжа - це наш бізнес і наша пристрасть.</div>
 									</div>
 								</div>
 							</div>
@@ -205,7 +205,7 @@
 				<div class="cotacts-top">
 					<div class="container">
 						<div class="cotacts__title en">Say hello</div>
-						<div class="cotacts__title ru delete">Скажи привет</div>
+						<div class="cotacts__title uk delete">Привітайся</div>
 						<div class="cotacts-body">
 							<div class="cotacts-body__column">
 								<div class="cotacts-body__item cotacts-body__item--1">45-35 #8 39th St, Sunnyside, NY 11104</div>
@@ -234,20 +234,23 @@
 					<div class="cotacts-content__column">
 						<div class="cotacts-content-form">
 							<div class="cotacts-content-form__title en">Get in touch</div>
-							<div class="cotacts-content-form__title ru delete">Связаться с нами</div>
+							<div class="cotacts-content-form__title uk delete">Зв'язатися з нами</div>
 							<form action="" class="cotacts-content-form-body">
 								<div class="cotacts-content-form-line">
-									<input type="text" placeholder="Name" class="input">
+									<input type="text" placeholder="Name" class="input en">
+									<input type="text" placeholder="Ім'я" class="input uk delete">
 								</div>
 								<div class="cotacts-content-form-line">
-									<input type="text" placeholder="E-mail or phone number" class="input">
+									<input type="text" placeholder="E-mail or phone number" class="input en">
+									<input type="text" placeholder="E-mail чи телефонний номер" class="input uk delete">
 								</div>
 								<div class="cotacts-content-form-line">
-									<textarea name="" id="" cols="" rows="" placeholder="Your message" class="input"></textarea>
+									<textarea name="" id="" cols="" rows="" placeholder="Your message" class="input en"></textarea>
+									<textarea name="" id="" cols="" rows="" placeholder="Твоє повідомлення" class="input uk delete"></textarea>
 								</div>
 								<div class="cotacts-content-form-button">
 									<button class="cotacts-content-form__btn btn btn--w en">Send message</button>
-									<button class="cotacts-content-form__btn btn btn--w ru delete">Отправить сообщение</button>
+									<button class="cotacts-content-form__btn btn btn--w uk delete">Відправити повідомлення</button>
 									
 								</div>
 							</form>
